Privacy map requests added to info.plist

--- a/PokeFinder/Info.plist
+++ b/PokeFinder/Info.plist
@@ -34,6 +34,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We will show you pokemons on the map</string>
+	<key>NSLocationUsageDescription</key>
+	<string>To provide you with poke info</string>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
